--- a/terraformNginx/front/narrow.css
+++ b/terraformNginx/front/narrow.css
@@ -17,9 +17,17 @@ body {
   padding-left: 15px;
 }
 input {
-  background:  transparent;
+  background: transparent;
+  border: none;
+  font-size: 7em;
+  color: white;
+  text-align: center;
+  width: 100%;
+  display: block;
+}
+span {
   border:  none;
-  font-size:  7em;
+  font-size:  3em;
   color: white;
   text-align:  center;
   width: 30%;
